tests/rosetta/transpiler/Scala/achilles-numbers.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/achilles-numbers.scala:132: error: Iterable[Int] does not take parameters
    for (k <- achSet.keys()) {
                         ^
one error found
